--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,8 @@
 <header>
   <h1>Coder Support Bundle Viewer</h1>
   <div class="header-actions">
+    <a id="grafana-btn" class="grafana-btn" target="_blank" style="display:none">Grafana</a>
+    <a id="prometheus-btn" class="prometheus-btn" target="_blank" style="display:none">Prometheus</a>
     <button id="timeseries-btn" class="timeseries-btn" style="display:none">Time Series Analysis</button>
     <button id="upload-btn" class="upload-btn">Upload Bundle</button>
     <input type="file" id="upload-input" accept=".zip" style="display: none;">
