agent logs viewer added

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 <header>
   <h1>Coder Support Bundle Viewer</h1>
   <div class="header-actions">
+    <a id="logs-btn" class="logs-btn" target="_blank" rel="noopener noreferrer" style="display:none">Agent Logs</a>
     <a id="grafana-btn" class="grafana-btn" target="_blank" style="display:none">Grafana</a>
     <a id="prometheus-btn" class="prometheus-btn" target="_blank" style="display:none">Prometheus</a>
     <button id="timeseries-btn" class="timeseries-btn" style="display:none">Time Series Analysis</button>
